// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with anchor 1`] = `
.c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
}

.c5 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c5 > p {
  margin-bottom: 0.5rem;
}

.c5 > p:last-child {
  margin-bottom: 0;
}

.c3 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  border-radius: 0.3rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  font-weight: 500;
  font-size: 0.875rem;
}

.c2 {
  padding: 0.5rem;
  border-radius: 0.3rem;
}

.c0 {
  display: inline-block;
  position: relative;
  border-style: solid;
  background-color: white;
  border-width: 2px;
  border-radius: 0.3rem;
  color: #ebc764;
  border-color: #937032;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c0:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #937032;
  color: #135f61;
}

.c0:hover:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  opacity: 0.7;
  color: #292B3E;
  background-color: #fafafa;
}

<a
  class="c0"
  href="https://google.com"
  kind="secondary"
  target="_blank"
>
  <div
    class="c1 c2"
    elevation="2"
    kind="secondary"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="secondary"
      >
        <div
          class="c5 c6"
          kind="secondary"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`it works with icon 1`] = `
.c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
}

.c5 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c5 > p {
  margin-bottom: 0.5rem;
}

.c5 > p:last-child {
  margin-bottom: 0;
}

.c3 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  border-radius: 0.3rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  font-weight: 500;
  font-size: 0.875rem;
}

.c2 {
  padding: 0.5rem;
  border-radius: 0.3rem;
}

.c0 {
  display: inline-block;
  position: relative;
  border-style: solid;
  background-color: white;
  border-width: 2px;
  border-radius: 0.3rem;
  color: #ebc764;
  border-color: #937032;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c0:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #937032;
  color: #135f61;
}

.c0:hover:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  opacity: 0.7;
  color: #292B3E;
  background-color: #fafafa;
}

<button
  class="c0"
  kind="secondary"
  type="button"
>
  <div
    class="c1 c2"
    elevation="2"
    kind="secondary"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="secondary"
      >
        <div
          class="c5 c6"
          kind="secondary"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle "
            data-icon="circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="c5 c7"
          kind="secondary"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`it works with loading 1`] = `
.c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
}

.c8 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c11 {
  -webkit-animation: kwQjlN;
  animation: kwQjlN;
  -webkit-transform: translateX(50%);
  -ms-transform: translateX(50%);
  transform: translateX(50%);
  left: -50%;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-duration: 0.6s;
  animation-duration: 0.6s;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
  animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
  position: relative;
  top: -1px;
  left: 0;
  width: 1.5rem;
  height: 0.75rem;
  background-color: #d4d4d4;
  border: 1px solid #d4d4d4;
  border-radius: 0.6rem;
}

.c10 {
  width: 100%;
  height: 0.75rem;
  background-color: #fafafa;
  border: 1px solid #d4d4d4;
  border-radius: 0.6rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-radius: 0.6rem;
}

.c5 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c5 > p {
  margin-bottom: 0.5rem;
}

.c5 > p:last-child {
  margin-bottom: 0;
}

.c3 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0;
  border-radius: 0.3rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  font-weight: 500;
  font-size: 0.875rem;
}

.c2 {
  padding: 0.5rem;
  border-radius: 0.3rem;
}

.c0 {
  display: inline-block;
  position: relative;
  border-style: solid;
  background-color: white;
  border-width: 2px;
  border-radius: 0.3rem;
  color: #ebc764;
  border-color: #937032;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c0:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #937032;
  color: #135f61;
}

.c0:hover:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  opacity: 0.7;
  color: #292B3E;
  background-color: #fafafa;
}

.c7 {
  width: 100%;
  position: absolute;
  left: 0;
  right: 0;
  top: calc(50% - 0.35rem);
}

<button
  class="c0"
  kind="secondary"
  type="button"
>
  <div
    class="c1 c2"
    elevation="2"
    kind="secondary"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="secondary"
      >
        <div
          class="c5 c6"
          kind="secondary"
        >
          Hello world
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class=""
        >
          <div
            class="c8 c9"
            elevation="1"
          >
            <div
              class="c10"
            >
              <div
                class="c11"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`it works with size large 1`] = `
.c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
}

.c5 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c5 > p {
  margin-bottom: 0.5rem;
}

.c5 > p:last-child {
  margin-bottom: 0;
}

.c3 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  border-radius: 0.3rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  font-weight: 500;
  font-size: 1rem;
}

.c2 {
  padding: 0.75rem;
  border-radius: 0.3rem;
}

.c0 {
  display: inline-block;
  position: relative;
  border-style: solid;
  background-color: white;
  border-width: 2px;
  border-radius: 0.3rem;
  color: #ebc764;
  border-color: #937032;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c0:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #937032;
  color: #135f61;
}

.c0:hover:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  opacity: 0.7;
  color: #292B3E;
  background-color: #fafafa;
}

<button
  class="c0"
  kind="secondary"
  type="button"
>
  <div
    class="c1 c2"
    elevation="2"
    kind="secondary"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="secondary"
      >
        <div
          class="c5 c6"
          kind="secondary"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`it works with size medium 1`] = `
.c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
}

.c5 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c5 > p {
  margin-bottom: 0.5rem;
}

.c5 > p:last-child {
  margin-bottom: 0;
}

.c3 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  border-radius: 0.3rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  font-weight: 500;
  font-size: 0.875rem;
}

.c2 {
  padding: 0.5rem;
  border-radius: 0.3rem;
}

.c0 {
  display: inline-block;
  position: relative;
  border-style: solid;
  background-color: white;
  border-width: 2px;
  border-radius: 0.3rem;
  color: #ebc764;
  border-color: #937032;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c0:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #937032;
  color: #135f61;
}

.c0:hover:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  opacity: 0.7;
  color: #292B3E;
  background-color: #fafafa;
}

<button
  class="c0"
  kind="secondary"
  type="button"
>
  <div
    class="c1 c2"
    elevation="2"
    kind="secondary"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="secondary"
      >
        <div
          class="c5 c6"
          kind="secondary"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</button>
`;

exports[`it works with size small 1`] = `
.c1 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
}

.c5 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: inherit;
}

.c5 > p {
  margin-bottom: 0.5rem;
}

.c5 > p:last-child {
  margin-bottom: 0;
}

.c3 {
  position: relative;
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  border-radius: 0.3rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  font-weight: 500;
  font-size: 0.75rem;
}

.c2 {
  padding: 0.25rem;
  border-radius: 0.3rem;
}

.c0 {
  display: inline-block;
  position: relative;
  border-style: solid;
  background-color: white;
  border-width: 2px;
  border-radius: 0.3rem;
  color: #ebc764;
  border-color: #937032;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c0:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #937032;
  color: #135f61;
}

.c0:hover:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  opacity: 0.7;
  color: #292B3E;
  background-color: #fafafa;
}

<button
  class="c0"
  kind="secondary"
  type="button"
>
  <div
    class="c1 c2"
    elevation="2"
    kind="secondary"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="secondary"
      >
        <div
          class="c5 c6"
          kind="secondary"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</button>
`;
